<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/itemdh_layout"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/bg_boderdot"
        android:layout_margin="2dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemdh_imgtrangthai"
            android:src="@drawable/ic_boxguidi"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="3dp"/>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:padding="7dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/frag_donhang_item_date"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:textColor="#333333"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/itemdh_tvngaydat"
                    android:text="23/11/2017"
                    android:textSize="13dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/line2_lv" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="7dp"
                android:paddingTop="3dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/frag_donhang_item_summoney"
                    android:textColor="#333333"
                    android:layout_width="0dp"

                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/itemdh_tvtongtien"
                    android:text="25.000"
                    android:textColor="#fd1b1b"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/frag_donhang_item_khoiluong"
                    android:textColor="#333333"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/itemdh_tvsoluongsp"
                    android:text="28"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_width="0dp"
                    android:textColor="#1be700"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>